--- a/shop/static/shop/styles2.css
+++ b/shop/static/shop/styles2.css
@@ -49,7 +49,8 @@ text-align: center;
 
 li{
 background:white;
-margin-top: 10px
+margin-top: 10px;
+list-style: none;
 }
 
 .list_container{
@@ -60,6 +61,6 @@ a{
 text-decoration: none;
 }
 
-
-.menu{
+.menu_tag{
+font-size: 5vw;
 }
