--- a/shop/static/shop/buyScreen.css
+++ b/shop/static/shop/buyScreen.css
@@ -1,56 +1,70 @@
-:root{
-background: blue;
-color:white;
+:root {
+  background: linear-gradient(#a51919, #750575);
+  color: white;
 }
 
-.product{
-text-align: center;
-border: white 4px solid;
-font-size: 2rem;
+.product {
+  text-align: center;
+  border: white 4px solid;
+  font-size: 2rem;
 }
 
-.price_tag{
-display: block;
-font-size: 1rem;
+.price_tag {
+  display: block;
+  font-size: 1rem;
 }
 
-.price{
-font-size: 2em;
+.price {
+  font-size: 2em;
 }
 
-.type_tag{
-
-display:block;
-margin-top: 1rem;
+.type_tag {
+  display: block;
+  margin-top: 1rem;
 }
 
-.about_tag{
-background:orange;
-display:block
-border: solid red 1px;
-position: relative;
-
+.about_tag {
+  background: rgb(180, 32, 156);
+  display: block;
+  border: solid red 1px;
+  position: relative;
 }
 
-.about_div{
-margin-top: 5em;
+.about_div {
+  margin-top: 5em;
 }
 
-.about{
-width:20rem;
-padding:2rem;
+.about {
+  width: 20rem;
+  padding: 2rem;
 }
 
-.btn_container{
-margin:auto;
-width: 20rem;
-
+.btn_container {
+  margin: auto;
+  width: 20rem;
 }
 
-.btn{
-position: absolute;
-margin:auto;
-width:10rem;
-height:2rem
+.btn {
+  position: absolute;
+  margin: auto;
+  width: 10rem;
+  height: 2rem;
 }
 
+.show-img {
+  position: relative;
+  width: 50%;
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 60%;
+  border: 0.7em dashed rgb(219, 151, 23);
+}
+
+.show-img:hover,
+:focus {
+  width: 60%;
+  max-height: 100%;
+  border: 1px dashed rgb(24, 16, 0);
+  transition: all;
+}
