--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -12,7 +12,8 @@ CART of {{user}}
         <a href="{%url 'shop:buy' p.product.id%}">
 <li>{{p.product.name}}
             <h5 class="price">{{p.product.price}}</h5>
-    <img src="{{p.product.product_image.url}}"/>
+    <!-- <img src="{{p.product.product_image.url}}"/> -->
+    <img src="{{p.product.image_url}}"/>
     <form action="{%url 'shop:removefromCart' p.id%}" class="remove_btn">
         <button type="submit" >remove form cart</button>
     </form>
