--- a/shop/static/shop/styles.css
+++ b/shop/static/shop/styles.css
@@ -1,34 +1,105 @@
-
-body{
-    background:red;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-
-.product_container{
-    width: 30vw;
-    height:30vh;
-    background: black;
-    color: cyan;
-    text-align: center;
-    border: 4px solid black;
-    margin:4px;
-    text-decoration: none;
+body {
+  background: red;
 }
 
-
-.list_container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.container {
+  display: grid;
+  grid-template-columns: 20vw auto;
+  grid-template-rows: 10rem auto;
+  grid-template-areas:
+    "menu title"
+    "menu product";
 }
 
-
-.heading{
-    text-align:center;
-    border-bottom: 2px solid black;
+.product_container {
+  width: 30vw;
+  height: 30vh;
+  background: black;
+  color: cyan;
+  text-align: center;
+  border: 4px solid black;
+  margin: 4px;
+  text-decoration: none;
 }
 
+.list_container {
+  display: flex;
+  flex-wrap: wrap;
+  grid-area: product;
+  justify-content: center;
+}
 
+.heading {
+  background: url(./img1.png);
+  background-size: cover;
+  text-align: center;
+  border-bottom: 2px solid black;
+  background-position: center;
+  grid-area: title;
+  text-transform: uppercase;
+  font-size: 300%;
+  color: midnightblue;
+  font-family: fantasy;
+  font-style: italic;
+  padding: 5vh;
+}
 
+body {
+  color: white;
+  background: linear-gradient(blue 40%, white);
+}
 
+.menu_title {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.menu {
+  grid-area: menu;
+  background: black;
+  font-size: 2em;
+  text-align: center;
+}
+
+li {
+  background: white;
+  margin-top: 10px;
+  list-style: none;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
+
+.menu_tag {
+  font-size: 5vw;
+  align-items: center;
+}
+
+.fa-bars,
+svg {
+  width: 5vw;
+}
+
+.icon-name {
+  display: none;
+  transition: all 1s ease;
+}
+
+li:hover > a > .icon-name {
+  display: inline;
+}
+
+.menu-list {
+  background-color: #a5a3a3;
+}
+
+.menu-list:hover {
+  background-color: azure;
+}
