changed price display to block

--- a/shop/static/shop/cart.css
+++ b/shop/static/shop/cart.css
@@ -50,10 +50,8 @@ button {
 }
 
 .price {
-  display: inline-block;
+  display: block;
   position: relative;
-  margin-left: 20rem;
-  margin-right: auto;
 }
 
 .product-name {
